test/fail/dictlit_typ_inconsistency2.cll
<int,int>{ 0:0, 1:1, 2:'a', 3:3 };
0;
